# SAMS

./: CMakeLists.txt  CMakeLists_MAIN.txt  Contributing  Contributing.md  view.py
.devcontainer/nvhpc/: Dockerfile  devcontainer.json
.devcontainer/scripts/: install_hdf5.sh
.devcontainer/scripts/kokkos/: default_cuda_setup.sh  default_cuda_setup_debug.sh  install.sh
.devcontainer/ubuntu-24.04/: Dockerfile  devcontainer.json
docs/: Developing SAMS Boundary Conditions.md  Developing SAMS Packages.md  Guide for SAMS Users.md  SAMS For LARE Users.md  SAMS Harness Principles.md  Using SAMS Boundary Conditions.md
doxygen/: Doxyfile
include/BoundaryConditions/: boundaryConditions.h
include/KVS/: KVS.h  URI.h
include/boundaryConditions/: boundaryConditions.h  builtInBoundaryConditions.h
include/harness/: axisRegistry.h  dimension.h  handles.h  harness.h  harnessDef.h  memoryRegistry.h  mpiDefaultTypes.h  mpiManager.h  staggerRegistry.h  streams.h  timer.h  typeRegistry.h  utils.h  variableDef.h  variableRegistry.h  welcome.h
include/harness/io/: writerHDF5.h  writerSimple.h
include/pp/: KokkosBackend.h  OpenMPBackend.h  OpenMPUnrolledBackend.h  agnosticTools.h  algorithm.h  array.h  atomic.h  callableTraits.h  cudaBackend.h  defs.h  demangle.h  hipBackend.h  manager.h  parallelWrapper.h  portableWrapperFrontend.h  pwmpi.h  range.h  utils.h
include/runner/: runner.h  runnerMacros.h  runnerUtils.h
src/: main.cpp
src/InitialConditions/BlastWave3D/: BlastWave3D.cpp  BlastWave3D.h
src/InitialConditions/BrioAndWu/: BrioAndWu.cpp  BrioAndWu.h
src/InitialConditions/Corrugation/: Corrugation.cpp  Corrugation.h
src/InitialConditions/EmeryWindTunnel/: EmeryWindTunnel.cpp  EmeryWindTunnel.h
src/InitialConditions/KarmanVortex/: KarmanVortex.cpp  KarmanVortex.h
src/InitialConditions/LARE/: boundary.cpp  control.cpp  instantiate.h  lareBoundaryClass.h  lareic.h
src/InitialConditions/LARE_neutral/: boundary.cpp  control.cpp  lareBoundaryClass_neutral.h  lareic_neutral.h
src/InitialConditions/MHDRotor/: MHDRotor.cpp  MHDRotor.h
src/InitialConditions/OrszagTang/: OrszagTang.cpp  OrszagTang.h
src/InitialConditions/OrszagTang3D/: OrszagTang3D.cpp  OrszagTang3D.h
src/InitialConditions/SodNeutral/: SodShockTube.cpp  SodShockTube.h
src/InitialConditions/SodShockTube/: SodShockTube.cpp  SodShockTube.h
src/InitialConditions/TwoFluidTests/: TwoFluidTest.cpp  TwoFluidTest.h
src/PhysicsPackages/LARE/: boundary.cpp  constants.h  control.cpp  diagnostics.cpp  general_remap.cpp  general_remap.hpp  instantiate.h  lagran.cpp  remap.cpp  remapData.h  setup.cpp  shared_data.h  typedefs.h  utils.h  xremap.cpp  yremap.cpp  zremap.cpp
src/PhysicsPackages/LARE/include/: KokkosBackend.h  OpenMPBackend.h  agnosticTools.h  array.h  cudaBackend.h  defs.h  hipBackend.h  manager.h  portableWrapperFrontend.h  pwmpi.h  range.h  timer.h  utils.h
src/PhysicsPackages/LARE/io/: writerHDF5.h  writerProto.h  writerSimple.h
src/PhysicsPackages/LARE3DNeutralFluid/: boundary.cpp  control.cpp  diagnostics.cpp  lagran.cpp  remap.cpp  setup.cpp  shared_data.h  xremap.cpp  yremap.cpp  zremap.cpp
src/PhysicsPackages/LARE3DSingleTemperature/: boundary.cpp  control.cpp  diagnostics.cpp  lagran.cpp  remap.cpp  setup.cpp  shared_data.h  xremap.cpp  yremap.cpp  zremap.cpp
src/PhysicsPackages/LARECommon/: eos.h  types.h
src/PhysicsPackages/LARE_neutral/: diagnostics.cpp  general_remap_neutral.cpp  general_remap_neutral.hpp  lagran.cpp  remap.cpp  remapData.h  remapData_neutral.h  setup.cpp  shared_data_neutral.h  shared_data_neutral_old.h  typedefs.h  xremap.cpp  yremap.cpp  zremap.cpp
src/PhysicsPackages/LARE_neutral/io/: writerHDF5.h  writerProto.h  writerSimple.h
src/PhysicsPackages/TWOFLUID/: TwoFluid.cpp  TwoFluid.cpp.cut  TwoFluid.cpp.old  constants.h  constants_neutral.h  diagnostics.cpp  twofluid.h
